--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
     <header>
       <!--Navigation-->
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="index.html">WEBSTUDIO</a>
 
         <ul>
-          <li><a href="">Studio</a></li>
+          <li><a href="index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
       <!--Contact-->
-      <span>
-        <a href="info@devstudio.com">info@devstudio.com</a>
+      <div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </span>
-
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      </div>
     </header>
     <main>
+      <!--Section-->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
       <!--Section1-->
       <section>
         <ul>
@@ -67,11 +70,16 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="img/section2_img1.jpg" alt="monitor" /></li>
-          <li><img src="img/section2_img2.jpg" alt="phone tabs" /></li>
+          <li>
+            <img src="img/section2_img1.jpg" width="360px" alt="monitor" />
+          </li>
+          <li>
+            <img src="img/section2_img2.jpg" width="360px" alt="phone tabs" />
+          </li>
           <li>
             <img
               src="img/section2_img3.jpg"
+              width="360px"
               alt="the phone on the background of the laptop"
             />
           </li>
@@ -83,135 +91,35 @@
         <ul>
           <!--Team card 1-->
           <li>
-            <ul>
-              <li><img src="img/section3_img1.jpg" alt="Mark Guerrero" /></li>
-              <li><h3>Mark Guerrero</h3></li>
-              <li><h4>Product Designer</h4></li>
-              <!--Social-->
-              <li>
-                <ul>
-                  <li>
-                    <a href="">
-                      <img src="img/instagram_img.jpg" alt="instagram" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/twitter_img.jpg" alt="twitter" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/facebook_img.jpg" alt="facebook" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/linkedin_img.jpg" alt="linkedin" />
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+            <img
+              src="img/section3_img1.jpg"
+              width="264px"
+              alt="Mark Guerrero"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <!--Team card 2-->
           <li>
-            <ul>
-              <li><img src="img/section3_img2.jpg" alt="Tom Ford" /></li>
-              <li><h3>Tom Ford</h3></li>
-              <li><h4>Frontend Developer</h4></li>
-              <!--Social-->
-              <li>
-                <ul>
-                  <li>
-                    <a href="">
-                      <img src="img/instagram_img.jpg" alt="instagram" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/twitter_img.jpg" alt="twitter" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/facebook_img.jpg" alt="facebook" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/linkedin_img.jpg" alt="linkedin" />
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+            <img src="img/section3_img2.jpg" width="264px" alt="Tom Ford" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <!--Team card 3-->
           <li>
-            <ul>
-              <li><img src="img/section3_img3.jpg" alt="Camila Garcia" /></li>
-              <li><h3>Camila Garcia</h3></li>
-              <li><h4>Marketing</h4></li>
-              <!--Social-->
-              <li>
-                <ul>
-                  <li>
-                    <a href="">
-                      <img src="img/instagram_img.jpg" alt="instagram" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/twitter_img.jpg" alt="twitter" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/facebook_img.jpg" alt="facebook" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/linkedin_img.jpg" alt="linkedin" />
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+            <img
+              src="img/section3_img3.jpg"
+              width="264px"
+              alt="Camila Garcia"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <!--Team card 4-->
           <li>
-            <ul>
-              <li><img src="img/section3_img4.jpg" alt="Daniel Wilson" /></li>
-              <li><h3>Daniel Wilson</h3></li>
-              <li><h4>UI Designer</h4></li>
-              <!--Social-->
-              <li>
-                <ul>
-                  <li>
-                    <a href="">
-                      <img src="img/instagram_img.jpg" alt="instagram" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/twitter_img.jpg" alt="twitter" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/facebook_img.jpg" alt="facebook" />
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <img src="img/linkedin_img.jpg" alt="linkedin" />
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+            <img src="img/section3_img4.jpg" alt="Daniel Wilson" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -219,7 +127,7 @@
     <!--Footer-->
 
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="index.html">WEBSTUDIO</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
