--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
       <!--Section1-->
       <section>
+        <h2>our features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -71,15 +72,15 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="img/section2_img1.jpg" width="360px" alt="monitor" />
+            <img src="img/section2_img1.jpg" width="360" alt="monitor" />
           </li>
           <li>
-            <img src="img/section2_img2.jpg" width="360px" alt="phone tabs" />
+            <img src="img/section2_img2.jpg" width="360" alt="phone tabs" />
           </li>
           <li>
             <img
               src="img/section2_img3.jpg"
-              width="360px"
+              width="360"
               alt="the phone on the background of the laptop"
             />
           </li>
@@ -91,33 +92,25 @@
         <ul>
           <!--Team card 1-->
           <li>
-            <img
-              src="img/section3_img1.jpg"
-              width="264px"
-              alt="Mark Guerrero"
-            />
+            <img src="img/section3_img1.jpg" width="264" alt="Mark Guerrero" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <!--Team card 2-->
           <li>
-            <img src="img/section3_img2.jpg" width="264px" alt="Tom Ford" />
+            <img src="img/section3_img2.jpg" width="264" alt="Tom Ford" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <!--Team card 3-->
           <li>
-            <img
-              src="img/section3_img3.jpg"
-              width="264px"
-              alt="Camila Garcia"
-            />
+            <img src="img/section3_img3.jpg" width="264" alt="Camila Garcia" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <!--Team card 4-->
           <li>
-            <img src="img/section3_img4.jpg" alt="Daniel Wilson" />
+            <img src="img/section3_img4.jpg" width="264" alt="Daniel Wilson" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
